<resources>
    <string name="app_name">University</string>


    <string name="lbl_email">University Email: </string>
    <string name="lbl_password">Password: </string>
    <string name="ex_email">john.doe00@school.edu</string>
    <string name="ex_password">Password</string>
    <string name="appLogo">appLogo</string>

    <string name="fontFamily">roboto_light</string>
    <string name="hint_universityEmailAddress">University Email Address</string>
    <string name="hint_password">Password</string>
    <string name="lbl_signIn">Sign In</string>
    <string name="tv_forgotPassword">Forgot Password?</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="university_email">University Email</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="coursesActivity_name">Courses</string>
</resources>
