<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple5"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_appLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/appLogo"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[3]" />

    <EditText
        android:id="@+id/et_uniMail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:hint="@string/hint_universityEmailAddress"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@color/purple9"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="346dp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:outlineAmbientShadowColor="@color/black"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@color/purple9"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/bt_signIn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="396dp"
        tools:targetApi="o"
        tools:text="@string/ex_password" />

    <Button
        android:id="@+id/bt_signIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/btn_sign_in_background"
        android:fontFamily="@font/roboto"
        android:text="@string/lbl_signIn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="486dp" />

    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tv_forgotPassword"
        android:textColor="@color/purple10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_signIn" />

    <TextView
        android:id="@+id/tv_noAccount"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/noAccount"
        android:textColor="@color/purple10"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_signIn" />

</android.support.constraint.ConstraintLayout>